--- a/Lab0JS/Zad 4/sheet.css
+++ b/Lab0JS/Zad 4/sheet.css
@@ -2,21 +2,27 @@ body{
     background-color: #211f1f;
 }
 .img-conteiner{
-    margin-top: 10px;
-    grid-row: 3;
+    margin-top: auto;
+    grid-row: 3/span 2;
     grid-column: 2;
     height: fit-content;
+    animation: scale-up-center 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) 2s both;
+
 }
 .img-conteiner img{
     max-width: 100%;
+}
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    grid-row: 2/span 2;
+    grid-column: 2;
 }
 header{
     opacity: 0;
     animation: slide-top 1.5s 0.5s forwards;
 }
 aside  {
-    grid-row: 2/span 2;
-    grid-column: 2;
     height: fit-content;
     opacity: 0;
     animation: slide-left 1.5s 1.5s forwards;
@@ -50,6 +56,7 @@ h1{
 }
 footer{
     opacity: 0;
+    grid-row: 5;
     animation: slide-bottom 1.5s 2.5s forwards;
 }
 .azure{
@@ -89,6 +96,17 @@ blockquote,h2,h1{
         color:var(--text-color-initial) ;
     }
 
+}
+
+@keyframes scale-up-center {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 @keyframes slide-top {
     0% {
