--- a/Lab5/views/index.pug
+++ b/Lab5/views/index.pug
@@ -46,10 +46,14 @@ html(lang='en')
                 tr
                     th Nazwisko
                     th Imię
+                    if students.some(student => student.faculty)
+                        th Faculty
                 tr
                 each student in students
                     tr
                         td= student.lname
                         td= student.fname
+                        if student.faculty
+                            td= student.faculty
                     
         img(src="/images/informatic.jpg")
